Some pre-1.19 refactors: Move TranslatableComponent and TextComponent to factory methods in Helpers. Some cleanup for JEI integration.